--- a/crystal_client_templates/partial_model_list_invalid_properties.mustache
+++ b/crystal_client_templates/partial_model_list_invalid_properties.mustache
@@ -7,7 +7,7 @@
 
       if _{{{name}}} = @{{{name}}}
       {{#isEnum}}
-        invalid_properties.push(OpenApi::EnumValidator.error_message("{{{name}}}", {{#lambda.uppercase}}valid_values_for_{{{name}}}{{/lambda.uppercase}})) unless OpenApi::EnumValidator.valid?(_{{{name}}}, {{#lambda.uppercase}}valid_values_for_{{{name}}}{{/lambda.uppercase}})
+        invalid_properties.push({{#lambda.uppercase}}error_message_for_{{{name}}}{{/lambda.uppercase}}) unless OpenApi::EnumValidator.valid?(_{{{name}}}, {{#lambda.uppercase}}valid_values_for_{{{name}}}{{/lambda.uppercase}})
       {{/isEnum}}
       {{^isEnum}}
       {{^allowableValues}}
