Make required properties more obvious

--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -22,7 +22,7 @@ module {{moduleName}}
     {{/notes}}
     {{#allParams}}
     {{#required}}
-    # @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
+    # @required @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
     {{/required}}
     {{^required}}
     # @optional @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
@@ -42,7 +42,7 @@ module {{moduleName}}
     {{/notes}}
     {{#allParams}}
     {{#required}}
-    # @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
+    # @required @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
     {{/required}}
     {{^required}}
     # @optional @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
@@ -69,7 +69,7 @@ module {{moduleName}}
     {{/notes}}
     {{#allParams}}
     {{#required}}
-    # @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
+    # @required @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
     {{/required}}
     {{^required}}
     # @optional @param {{paramName}} [{{>partial_model_generic_property_data_type}}]{{#description}} {{{description}}}{{/description}}
