Require relative files

--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -1,6 +1,7 @@
 # {{#lambdaPrefixWithHash}}{{> api_info}}{{/lambdaPrefixWithHash}}
 
 require "uri"
+require "../api_client"
 
 module {{moduleName}}
 {{#operations}}
