if with assignment does not work with Bool? when value is false
Check for nil explicitly after assignment in unless statement

Below would print `false is nil`
```
b : Bool? = false
if b1 = b
  puts "#{b} is not nil"
else
  puts "#{b} is nil"
end
```

--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -120,7 +120,7 @@ module {{moduleName}}
         raise ArgumentError.new("\"{{{paramName}}}\" is required and cannot be null") if {{{paramName}}}.nil?
         {{/isNullable}}
         {{/required}}
-        if _{{{paramName}}} = {{{paramName}}}
+        unless (_{{{paramName}}} = {{{paramName}}}).nil?
           {{#isEnum}}
           OpenApi::EnumValidator.validate("{{{paramName}}}", _{{{paramName}}}, {{#lambda.uppercase}}{{operationId}}_valid_values_for_{{{paramName}}}{{/lambda.uppercase}})
           {{/isEnum}}
