--- a/crystal_client_templates/api_error.mustache
+++ b/crystal_client_templates/api_error.mustache
@@ -19,8 +19,8 @@ module {{moduleName}}
     # Override to_s to display a friendly error message
     def to_s
       msg = ""
-      msg = msg + "\nHTTP status code: #{code}" if @code
-      msg = msg + "\nResponse headers: #{response_headers}" if @response_headers
+      msg = msg + "\nHTTP status code: #{code}" if !@code.nil?
+      msg = msg + "\nResponse headers: #{response_headers}" if !@response_headers.nil?
       if @message.nil? || @message.to_s.empty?
         msg = msg + "\nError message: the server returns an error but the HTTP response body is empty."
       else
