--- a/crystal_client_templates/configuration.mustache
+++ b/crystal_client_templates/configuration.mustache
@@ -195,10 +195,11 @@ module {{moduleName}}
     # Gets API key (with prefix if set).
     # @param [String] param_name the parameter name of API key auth
     def api_key_with_prefix(param_name)
-      if prefix = @api_key_prefix[param_name]?
-        "#{prefix} #{@api_key[param_name]}"
-      else
+      prefix = @api_key_prefix[param_name]?
+      if prefix.nil?
         @api_key[param_name]? || ""
+      else
+        "#{prefix} #{@api_key[param_name]}"
       end
     end
 
