--- a/crystal_client_templates/partial_model_enum_class.mustache
+++ b/crystal_client_templates/partial_model_enum_class.mustache
@@ -6,7 +6,7 @@
 
     ERROR_MESSAGE = %{invalid value for "{{{name}}}", must be one of [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}].}
 
-    VALID_VALUES = StaticArray[{{#allowableValues}}{{#enumVars}}{{#isContainer}}{{^items.isString}}{{{items.dataType}}}.new({{/items.isString}}{{/isContainer}}{{^isContainer}}{{^isString}}{{{dataType}}}.new({{/isString}}{{/isContainer}}{{{value}}}{{#isContainer}}{{^items.isString}}){{/items.isString}}{{/isContainer}}{{^isContainer}}{{^isString}}){{/isString}}{{/isContainer}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}]
+    VALID_VALUES = {{#allowableValues}}{{#enumVars}}{{#-first}}{{#isContainer}}{{{items.dataType}}}{{/isContainer}}{{^isContainer}}{{{dataType}}}{{/isContainer}}{{/-first}}{{/enumVars}}{{/allowableValues}}.static_array({{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}})
 
     delegate to_json_object_key, to: @data
 
