--- a/crystal_client_templates/api_client.mustache
+++ b/crystal_client_templates/api_client.mustache
@@ -25,6 +25,11 @@ module {{moduleName}}
     # @return [Hash]
     property default_headers : Hash(String, String)
 
+    # Defines the cookies to be used in HTTP requests of all API calls by default.
+    #
+    # @return [Hash]
+    property default_cookies : Hash(String, String)
+
     # Initializes the ApiClient
     # @option config [Configuration] Configuration for initializing the object, default to Configuration.default
     def initialize(@config = Configuration.default)
@@ -32,6 +37,7 @@ module {{moduleName}}
       @default_headers = {
         "User-Agent" => @user_agent,
       }
+      @default_cookies = Hash(String, String).new
     end
 
     def self.default : ApiClient
@@ -63,6 +69,7 @@ module {{moduleName}}
     # @param [String] auth_names Authentication scheme name
     def update_params_for_auth!(
       header_params : Hash(String, String),
+      cookie_params : Hash(String, String),
       query_params : Hash(String, (String | Array(String))),
       auth_names : Array(String)
     ) : Nil
@@ -72,6 +79,8 @@ module {{moduleName}}
         case auth_setting["in"]
         when "header"
           header_params[auth_setting["key"]] = auth_setting["value"]
+        when "cookie"
+          cookie_params[auth_setting["key"]] = auth_setting["value"]
         when "query"
           query_params[auth_setting["key"]] = auth_setting["value"]
         else
@@ -143,6 +152,7 @@ module {{moduleName}}
       post_body : IO | String | Nil = nil,
       auth_names : Array(String) = Array(String).new,
       header_params : Hash(String, String) = Hash(String, String).new,
+      cookie_params : Hash(String, String) = Hash(String, String).new,
       query_params : Hash(String, (String | Array(String))) = Hash(String, (String | Array(String))).new,
       form_params : Hash(String, (String | Array(String) | IO)) | Nil = nil
     ) : Crest::Request
@@ -154,8 +164,9 @@ module {{moduleName}}
       #   "client_key" => @config.ssl_client_key
       # }
 
-      update_params_for_auth! header_params, query_params, auth_names
+      update_params_for_auth! header_params, cookie_params, query_params, auth_names
       header_params.merge!(default_headers)
+      cookie_params.merge!(default_cookies)
 
       if !post_body.nil? && (post_body.is_a?(IO) || post_body.is_a?(String) && !post_body.empty?)
         # use JSON string in the payload
@@ -171,7 +182,7 @@ module {{moduleName}}
         build_request_url(path, operation),
         params: query_params,
         headers: header_params,
-        # cookies: cookie_params, # TODO add cookies support
+        cookies: cookie_params,
         form: form_or_body,
         logging: @config.debugging,
         handle_errors: false,
